# nix-flakes

./: README.md  flake.nix  pyproject.toml  setup.cfg
PythonEDAInfrastructureNixFlakes/network/grpc/: grpc_server.py
PythonEDANixFlakesInfrastructure/: folder_flake_repo.py
PythonEDANixFlakesInfrastructure/recipe/: dynamically_discoverable_flake_recipe_repo.py
