[tool.poetry]
name = "pythoneda-nix-flakes-infrastructure"
version = "0.0.1a1"
description = "Infrastructure layer of PythonEDA Nix Flakes"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDANixFlakesInfrastructure"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a5"
pythoneda-nix-flakes = "^0.0.1a1"
pythoneda-infrastructure-layer = "^0.0.1a2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
